fixed alignment card 3

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ body {
 .occupation3 {
   position: absolute;
   top: 185px;
-  left: 85px;
+  left: 82px;
 }
 
 /* Social Media */
